--- a/styles.css
+++ b/styles.css
@@ -6,21 +6,46 @@ body {
 
 h1 {
     color: white;
+    font-family: 'Big Shoulders Display', cursive;
 }
 
 p {
     color: hsla(0, 0%, 100%, 0.75);
+    font-family: 'Lexend Deca', sans-serif;
+    font-size: 15px;
+}
+
+button {
+    background-color: hsla(0, 0%, 100%, 0.75);
+    font-family: 'Lexend Deca', sans-serif;
+    border: none;
+    height: 40px;
+    width: 120px;
+    border-radius: 20px;
+    margin: 20px 0;
+}   
+
+.box {
+    box-sizing: border-box;
+    padding: 40px;
 }
 
 .sedans {
     background-color: hsl(31, 77%, 52%);
-    
+    border-radius: 10px 10px 0 0;
 }
+
+.sedans button {color: hsl(31, 77%, 52%);}
 
 .suvs {
     background-color: hsl(184, 100%, 22%);
 }
 
+.suvs button {color: hsl(184, 100%, 22%);}
+
 .luxury {
     background-color: hsl(179, 100%, 13%);
+    border-radius: 0 0 10px 10px;
 }
+
+.luxury button {color: hsl(179, 100%, 13%);}
